deploy/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poorbricks-server
  namespace: poorbricks
spec:
  type: ClusterIP
  selector:
    app: poorbricks-server
  ports:
    - name: http
      port: 8080
      targetPort: http
